c++/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:33:57 **** Incremental Build of configuration Debug for project 2.9.3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2.9.3.o" "..\\src\\2.9.3.cpp" 
..\src\2.9.3.cpp: In function 'int main()':
..\src\2.9.3.cpp:19:18: warning: for increment expression has no effect [-Wunused-value]
 for(int i=0;i++;i==c){
                 ~^~~
..\src\2.9.3.cpp:20:24: error: expected ')' before '{' token
 if(vector[a]==vector[b]{
                        ^
..\src\2.9.3.cpp:24:1: error: expected primary-expression before '}' token
 }//loop
 ^
09:34:01 **** Incremental Build of configuration Debug for project 2.9.3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2.9.3.o" "..\\src\\2.9.3.cpp" 
g++ -o 2.9.3.exe "src\\2.9.3.o" 
09:34:17 **** Incremental Build of configuration Debug for project 2.9.3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2.9.3.o" "..\\src\\2.9.3.cpp" 
g++ -o 2.9.3.exe "src\\2.9.3.o" 
09:34:48 **** Incremental Build of configuration Debug for project 2.9.3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\2.9.3.o" "..\\src\\2.9.3.cpp" 
g++ -o 2.9.3.exe "src\\2.9.3.o" 
